make emma changes

--- a/faculty.html
+++ b/faculty.html
@@ -6,7 +6,7 @@
     <title>Michael Chekhov Acting Studio</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,900" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Bree+Serif" rel="stylesheet">
+
     <link rel='stylesheet' href='assets/master.css' />
   </head>
   <body>
@@ -86,7 +86,7 @@
             <h3 class='faculty-name'>
               JAMES LUSE
             </h3>
-            <img class='faculty-img' src='assets/images/akil.png' />
+            <img class='faculty-img' src='assets/images/luse.jpeg' />
             .......TBD
           </div>
           <div class='faculty-card'>
