--- a/friends.html
+++ b/friends.html
@@ -6,7 +6,7 @@
     <title>Michael Chekhov Acting Studio</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,900" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Bree+Serif" rel="stylesheet">
+
     <link rel='stylesheet' href='assets/master.css' />
     <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.41.0/mapbox-gl.js'></script>
     <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.41.0/mapbox-gl.css' rel='stylesheet' />
@@ -36,7 +36,10 @@
     <div id="primary" class="content-area">
       <div class='page-body'>
         <h2 class='page-title'>FRIENDS</h2>
-
+        <div class='map-text'>
+          Reach out to and follow our network of friends around the world
+          working with the Michael Chekhov Technique!
+        </div>
         <div className='map-container'>
           <div id='map'></div>
         </div>
