--- a/programs.html
+++ b/programs.html
@@ -6,7 +6,7 @@
     <title>Michael Chekhov Acting Studio</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,900" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Bree+Serif" rel="stylesheet">
+
     <link rel='stylesheet' href='assets/master.css' />
     <script src='assets/script.js' charset="utf-8"></script>
   </head>
@@ -35,7 +35,7 @@
       <div class='page-body'>
         <div class='page-title'>PROGRAMS</div>
         <div class='programs-container'>
-          <div class='art-of-the-actor'>ART OF THE ACTOR</div>
+          <img class='art-of-the-actor' src='assets/images/aota-test.jpg'></img>
           <div class='programs-grid'>
             <li class='program-card gold'>
               <div class='program-card-title'>WORKSHOPS</div>
@@ -61,9 +61,14 @@
               <!-- EMMA, LENARD, ETC: Edit the program descriptions in 'assets/script.js' -->
             </div>
           </div>
-          <div class='programs-calendar'>
-            <iframe src="https://calendar.google.com/calendar/embed?src=o2gi198lh4khmcm213a6kvq4lk%40group.calendar.google.com&ctz=America/New_York"
-            style="border: 0" width="100%" height="100%" frameborder="0" scrolling="no"></iframe>
+          <div class='programs-calendar-section'>
+            <div class='programs-video'>
+              <iframe width="420" height="235" src="https://www.youtube.com/embed/OF-4BgCnECE?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            </div>
+            <div class='programs-calendar'>
+              <iframe src="https://calendar.google.com/calendar/embed?showTitle=0&amp;showPrint=0&amp;showCalendars=0&amp;mode=AGENDA&amp;color=%23A32929&amp;src=o2gi198lh4khmcm213a6kvq4lk%40group.calendar.google.com&ctz=America/New_York"
+              style="border: 0" width="100%" height="100%" frameborder="0" scrolling="no"></iframe>
+            </div>
           </div>
         </div>
       </div>
