--- a/lenard.html
+++ b/lenard.html
@@ -6,7 +6,6 @@
     <title>Michael Chekhov Acting Studio</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,900" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Bree+Serif" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Nothing+You+Could+Do" rel="stylesheet">
     <link rel='stylesheet' href='assets/master.css' />
   </head>
@@ -35,20 +34,7 @@
       <div class='page-body'>
         <h2 class='page-title'>LENARD PETIT</h2>
 
-        <section class='lenard-section'>
-          <h2 class='studio-greeting'>
-            <em class='lenard-quote'>
-              "Michael Chekhov envisioned a new theatre with a heart. With
-              his approach actors are able to make heart connections with
-              the audience. It is self expression which is also real
-              communication, human being to human being. This is why I am
-              attracted to this work."
-            </em>
-          </h2>
-          <div class='group lenard-attribution'>— Lenard Petit</div>
-        </section>
-
-        <section class='page-section page-section-gray'>
+        <section>
           <img class='image-float' src='assets/images/lenard.jpeg' />
           <div>
             Lenard Petit is one of a handful of teacher students trained
@@ -74,6 +60,25 @@
             and BFA Acting programs at Mason Gross School of the Arts at
             Rutgers University.
           </div>
+        </section>
+
+        <section class='lenard-grid'>
+          <section class='lenard-quote-section'>
+            <h2 class='studio-greeting'>
+              <em class='lenard-quote'>
+                "Michael Chekhov envisioned a new theatre with a heart. With
+                his approach actors are able to make heart connections with
+                the audience. It is self expression which is also real
+                communication, human being to human being. This is why I am
+                attracted to this work."
+              </em>
+            </h2>
+            <div class='group lenard-attribution'>— Lenard Petit</div>
+          </section>
+          <section class='lenard-image-section'>
+            <img class='lenard-image' src='assets/images/blake1.jpg' />
+            <div class='lenard-image-source'>William Blake</div>
+          </section>
         </section>
       </div>
     </div>
