--- a/philosophy.html
+++ b/philosophy.html
@@ -6,7 +6,6 @@
     <title>Michael Chekhov Acting Studio</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,900" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Bree+Serif" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Nothing+You+Could+Do" rel="stylesheet">
     <link rel='stylesheet' href='assets/master.css' />
   </head>
@@ -105,9 +104,9 @@
         </section>
 
         <section class='phil-image-grid'>
+          <img class='phil-img' src='assets/images/student3.jpeg' />
           <img class='phil-img' src='assets/images/student1.jpeg' />
           <img class='phil-img' src='assets/images/student2.jpeg' />
-          <img class='phil-img' src='assets/images/student3.jpeg' />
           <img class='phil-img' src='assets/images/student4.jpeg' />
         </section>
 
@@ -196,7 +195,7 @@
 
         <section class='phil-image-grid'>
           <img class='phil-img' src='assets/images/phil1.jpeg' />
-          <img class='phil-img' src='assets/images/phil2.jpeg' />
+          <img class='phil-img' src='assets/images/phil2.jpg' />
           <img class='phil-img' src='assets/images/phil3.jpeg' />
           <img class='phil-img' src='assets/images/phil4.jpeg' />
         </section>
@@ -247,6 +246,18 @@
             <img src='assets/images/book7.jpeg' />
             <img src='assets/images/book8.jpeg' />
           </ul>
+
+          <div class='phil-video-section'>
+            <iframe class='phil-video' src="https://player.vimeo.com/video/19313780" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+            <div class='phil-video-attribution'>
+              <a href="https://vimeo.com/ondemand/michamasterclasses"><img class='phil-video-attribution-image' src='assets/images/micha.jpg' /></a>
+              <div class='phil-video-description'>
+                <a href="https://vimeo.com/ondemand/michamasterclasses">
+                  Master Classes in the Michael Chekhov Technique by MICHA
+                </a>
+              </div>
+            </div>
+          </div>
         </section>
       </div>
     </div>
