--- a/studio.html
+++ b/studio.html
@@ -6,7 +6,6 @@
     <title>Michael Chekhov Acting Studio</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,900" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Bree+Serif" rel="stylesheet">
     <link rel='stylesheet' href='assets/master.css' />
   </head>
   <body>
@@ -41,16 +40,15 @@
         </section>
 
         <section class='page-section video-grid'>
-          <iframe width="420" height="315" src="https://www.youtube.com/embed/FvyWGmb1wCQ?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+          <iframe width="420" height="235" src="https://www.youtube.com/embed/FvyWGmb1wCQ?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
           <div>
-            Lenard has developed the work of Michael Chekhov in a practical
-            and imaginative way for actor’s clearly translating the technique
+            Lenard Petit, Artistic Director, has developed the work of Michael Chekhov
+            in a practical and imaginative way, clearly translating the technique
             into something easy to use for actors today. His approach is
             experienced in his teaching and expressed in his writing. <em>The
             Michael Chekhov Handbook</em>, for the Actor can be purchased
             <a class='studio-link' href='http://www.dramabookshop.com/book/9780415496728'>here</a>.
-            Additionally a few
-            <a class='studio-link' href=''>articles</a>
+            Additionally a few <a class='studio-link' href=''>articles</a>
             by Lenard are included here for you–gratis!
           </div>
         </section>
