add philosophy intro video

--- a/philosophy.html
+++ b/philosophy.html
@@ -34,30 +34,33 @@
       <div class='page-body'>
         <h2 class='page-title'>PHILOSOPHY</h2>
 
-        <section class='page-section page-section-gray'>
-          <h3 class='section-header'>MICHAEL CHEKHOV’S TECHNIQUE</h3>
-          <p>
-            Michael Chekhov developed an acting technique, a ‘psycho-physical
-            approach’, in which transformation, working with impulse,
-            imagination and inner and outer gesture are central. It offers
-            clear and practical tools in working with imagination, feelings and atmosphere.
-          </p>
-          <p>
-            Chekhov's technique is a completely imaginative approach to
-            experiencing the truth of the moment. According to Chekhov,
-            the work of the actor is to create an inner event which is
-            an actual experience occurring in real time within the actor.
-            This inner event as it is being experienced by the actor is
-            witnessed by the audience as an outward expression related
-            to the contextual moment of the play. This event and the
-            ability to create it belong to what Michael Chekhov calls the
-            Creative Individuality of the actor, and is not directly tied to
-            his personality. This Creative Individuality allows the artist
-            actor to use parts of themselves that are not just the smaller
-            meaner more banal elements that make up their daily life, but
-            rather parts of their unconscious, where dwell more universal
-            and archetypal images.
-          </p>
+        <section class='page-section page-section-gray phil-intro-grid'>
+          <div class='phil-intro-text'>
+            <h3 class='section-header'>MICHAEL CHEKHOV’S TECHNIQUE</h3>
+            <p>
+              Michael Chekhov developed an acting technique, a ‘psycho-physical
+              approach’, in which transformation, working with impulse,
+              imagination and inner and outer gesture are central. It offers
+              clear and practical tools in working with imagination, feelings and atmosphere.
+            </p>
+            <p>
+              Chekhov's technique is a completely imaginative approach to
+              experiencing the truth of the moment. According to Chekhov,
+              the work of the actor is to create an inner event which is
+              an actual experience occurring in real time within the actor.
+              This inner event as it is being experienced by the actor is
+              witnessed by the audience as an outward expression related
+              to the contextual moment of the play. This event and the
+              ability to create it belong to what Michael Chekhov calls the
+              Creative Individuality of the actor, and is not directly tied to
+              his personality. This Creative Individuality allows the artist
+              actor to use parts of themselves that are not just the smaller
+              meaner more banal elements that make up their daily life, but
+              rather parts of their unconscious, where dwell more universal
+              and archetypal images.
+            </p>
+          </div>
+          <iframe class='phil-intro-video' width="420" height="235" src="https://www.youtube.com/embed/PufzXM820w4?rel=0" frameborder="0" allowfullscreen></iframe>
         </section>
 
         <section class='page-section'>
