--- a/programs.html
+++ b/programs.html
@@ -63,7 +63,7 @@
           </div>
           <div class='programs-calendar-section'>
             <div class='programs-video'>
-              <iframe width="420" height="235" src="https://www.youtube.com/embed/OF-4BgCnECE?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+              <iframe width="420" height="235" src="https://www.youtube.com/embed/OF-4BgCnECE?rel=0" frameborder="0" allowfullscreen></iframe>
             </div>
             <div class='programs-calendar'>
               <iframe src="https://calendar.google.com/calendar/embed?showTitle=0&amp;showPrint=0&amp;showCalendars=0&amp;mode=AGENDA&amp;color=%23A32929&amp;src=o2gi198lh4khmcm213a6kvq4lk%40group.calendar.google.com&ctz=America/New_York"
