--- a/studio.html
+++ b/studio.html
@@ -40,7 +40,7 @@
         </section>
 
         <section class='page-section video-grid'>
-          <iframe width="420" height="235" src="https://www.youtube.com/embed/FvyWGmb1wCQ?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+          <iframe width="420" height="235" src="https://www.youtube.com/embed/FvyWGmb1wCQ?rel=0" frameborder="0" allowfullscreen></iframe>
           <div>
             Lenard Petit, Artistic Director, has developed the work of Michael Chekhov
             in a practical and imaginative way, clearly translating the technique
