make header and footer responsive

--- a/lenard.html
+++ b/lenard.html
@@ -16,7 +16,7 @@
     	</a>
       <nav class='menu'>
         <group class='submenu-link'>
-          <a class='menu-item' href='studio.html'>Studio</a>
+          <a class='menu-item'>Studio</a>
           <nav class='submenu'>
             <a class='submenu-item' href='studio.html'>Welcome</a>
             <a class='submenu-item' href='lenard.html'>Lenard</a>
@@ -83,7 +83,7 @@
       </div>
     </div>
     <footer>
-      <section>
+      <section class='footer-left'>
         <span>
           <a href='https://www.google.com/maps/place/michael+chekhov+acting+studio/@40.7407823,-74.002077,14.61z/data=!4m5!3m4!1s0x89c259bd98ae6e09:0x77ac45e05794e54c!8m2!3d40.7386774!4d-73.9980879'>138 W 15th St, 1st floor New York, New York 10011</a>
         </span>
@@ -93,7 +93,7 @@
           </a>to our email newsletter
         </span>
       </section>
-      <section>
+      <section class='footer-right'>
         <a href='mailto:info@michaelchekhovactingstudio.com'>
           <img src="assets/images/email.png" />
         </a>
