make contact page responsive

--- a/contact.html
+++ b/contact.html
@@ -37,11 +37,10 @@
           <div class='contact-grid-item contact-grid-text'>
 
             <section class='contact-section'>
-              <span><strong>Questions:</strong>
-                <a href='mailto:info@michaelchekhovactingstudio.com'>
-                  info@michaelchekhovactingstudio.com
-                </a>
-              </span>
+              <div><strong>Questions:</strong></div>
+              <a href='mailto:info@michaelchekhovactingstudio.com'>
+                info@michaelchekhovactingstudio.com
+              </a>
             </section>
 
             <section class='contact-section'>
