make philosophy responsive

--- a/philosophy.html
+++ b/philosophy.html
@@ -37,6 +37,7 @@
         <section class='page-section page-section-gray phil-intro-grid'>
           <div class='phil-intro-text'>
             <h3 class='section-header'>MICHAEL CHEKHOV’S TECHNIQUE</h3>
+            <iframe class='phil-intro-video' width="420" height="235" src="https://www.youtube.com/embed/PufzXM820w4?rel=0" frameborder="0" allowfullscreen></iframe>
             <p>
               Michael Chekhov developed an acting technique, a ‘psycho-physical
               approach’, in which transformation, working with impulse,
@@ -59,8 +60,8 @@
               rather parts of their unconscious, where dwell more universal
               and archetypal images.
             </p>
+
           </div>
-          <iframe class='phil-intro-video' width="420" height="235" src="https://www.youtube.com/embed/PufzXM820w4?rel=0" frameborder="0" allowfullscreen></iframe>
         </section>
 
         <section class='page-section'>
@@ -239,29 +240,29 @@
             <a href='http://www.dramabookshop.com/'>legendary Drama Book Shop</a>, make sure to
             call and see what they have in stock or can order.
           </p>
-          <ul class='phil-grid'>
-            <img src='assets/images/book1.jpeg' />
-            <img src='assets/images/book2.jpeg' />
-            <img src='assets/images/book3.jpeg' />
-            <img src='assets/images/book4.jpeg' />
-            <img src='assets/images/book5.jpeg' />
-            <img src='assets/images/book6.jpeg' />
-            <img src='assets/images/book7.jpeg' />
-            <img src='assets/images/book8.jpeg' />
-          </ul>
+        </section>
+        <ul class='phil-grid'>
+          <img class='phil-img' src='assets/images/book1.jpeg' />
+          <img class='phil-img' src='assets/images/book2.jpeg' />
+          <img class='phil-img' src='assets/images/book3.jpeg' />
+          <img class='phil-img' src='assets/images/book4.jpeg' />
+          <img class='phil-img' src='assets/images/book5.jpeg' />
+          <img class='phil-img' src='assets/images/book6.jpeg' />
+          <img class='phil-img' src='assets/images/book7.jpeg' />
+          <img class='phil-img' src='assets/images/book8.jpeg' />
+        </ul>
 
-          <div class='phil-video-section'>
-            <iframe class='phil-video' src="https://player.vimeo.com/video/19313780" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-            <div class='phil-video-attribution'>
-              <a href="https://vimeo.com/ondemand/michamasterclasses"><img class='phil-video-attribution-image' src='assets/images/micha.jpg' /></a>
-              <div class='phil-video-description'>
-                <a href="https://vimeo.com/ondemand/michamasterclasses">
-                  Master Classes in the Michael Chekhov Technique by MICHA
-                </a>
-              </div>
+        <div class='phil-video-section'>
+          <iframe class='phil-video' src="https://player.vimeo.com/video/19313780" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+          <div class='phil-video-attribution'>
+            <a href="https://vimeo.com/ondemand/michamasterclasses"><img class='phil-video-attribution-image' src='assets/images/micha.jpg' /></a>
+            <div class='phil-video-description'>
+              <a href="https://vimeo.com/ondemand/michamasterclasses">
+                Master Classes in the Michael Chekhov Technique by MICHA
+              </a>
             </div>
           </div>
-        </section>
+        </div>
       </div>
     </div>
 
