make programs responsive

--- a/contact.html
+++ b/contact.html
@@ -94,7 +94,9 @@
     <footer>
       <section class='footer-left'>
         <span>
-          <a href='https://www.google.com/maps/place/michael+chekhov+acting+studio/@40.7407823,-74.002077,14.61z/data=!4m5!3m4!1s0x89c259bd98ae6e09:0x77ac45e05794e54c!8m2!3d40.7386774!4d-73.9980879'>138 W 15th St, 1st floor New York, New York 10011</a>
+          <a href='https://www.google.com/maps/place/michael+chekhov+acting+studio/@40.7407823,-74.002077,14.61z/data=!4m5!3m4!1s0x89c259bd98ae6e09:0x77ac45e05794e54c!8m2!3d40.7386774!4d-73.9980879'>
+            138 W 15th St, 1st floor, NY, NY 10011
+          </a>
         </span>
         <span>
           <a href='http://michaelchekhovactingstudio.us10.list-manage1.com/subscribe?u=f86b311144f65c098b5d1ac47&id=f782f7b7a4'>
