--- a/philosophy.html
+++ b/philosophy.html
@@ -270,7 +270,7 @@
       <section class='footer-left'>
         <span>
           <a href='https://www.google.com/maps/place/michael+chekhov+acting+studio/@40.7407823,-74.002077,14.61z/data=!4m5!3m4!1s0x89c259bd98ae6e09:0x77ac45e05794e54c!8m2!3d40.7386774!4d-73.9980879'>
-            138 W 15th St, 1st floor New York, New York 10011
+            138 W 15th St, 1st floor, NY, NY 10011
           </a>
         </span>
         <span>
