--- a/programs.html
+++ b/programs.html
@@ -63,7 +63,7 @@
           </div>
           <div class='programs-calendar-section'>
             <div class='programs-video'>
-              <iframe width="420" height="235" src="https://www.youtube.com/embed/OF-4BgCnECE?rel=0" frameborder="0" allowfullscreen></iframe>
+              <iframe width="100%" height="100%" src="https://www.youtube.com/embed/OF-4BgCnECE?rel=0" frameborder="0" allowfullscreen></iframe>
             </div>
             <div class='programs-calendar'>
               <iframe src="https://calendar.google.com/calendar/embed?showTitle=0&amp;showPrint=0&amp;showCalendars=0&amp;mode=AGENDA&amp;color=%23A32929&amp;src=o2gi198lh4khmcm213a6kvq4lk%40group.calendar.google.com&ctz=America/New_York"
@@ -76,7 +76,9 @@
     <footer>
       <section class='footer-left'>
         <span>
-          <a href='https://www.google.com/maps/place/michael+chekhov+acting+studio/@40.7407823,-74.002077,14.61z/data=!4m5!3m4!1s0x89c259bd98ae6e09:0x77ac45e05794e54c!8m2!3d40.7386774!4d-73.9980879'>138 W 15th St, 1st floor New York, New York 10011</a>
+          <a href='https://www.google.com/maps/place/michael+chekhov+acting+studio/@40.7407823,-74.002077,14.61z/data=!4m5!3m4!1s0x89c259bd98ae6e09:0x77ac45e05794e54c!8m2!3d40.7386774!4d-73.9980879'>
+            138 W 15th St, 1st floor, NY, NY 10011
+          </a>
         </span>
         <span>
           <a href='http://michaelchekhovactingstudio.us10.list-manage1.com/subscribe?u=f86b311144f65c098b5d1ac47&id=f782f7b7a4'>
