make studio responsive

--- a/studio.html
+++ b/studio.html
@@ -40,8 +40,8 @@
         </section>
 
         <section class='page-section video-grid'>
-          <iframe width="420" height="235" src="https://www.youtube.com/embed/FvyWGmb1wCQ?rel=0" frameborder="0" allowfullscreen></iframe>
-          <div>
+          <iframe class='studio-video' width="420" height="235" src="https://www.youtube.com/embed/FvyWGmb1wCQ?rel=0" frameborder="0" allowfullscreen></iframe>
+          <div class='studio-video-text'>
             Lenard Petit, Artistic Director, has developed the work of Michael Chekhov
             in a practical and imaginative way, clearly translating the technique
             into something easy to use for actors today. His approach is
@@ -53,7 +53,7 @@
           </div>
         </section>
 
-        <nav class=''>
+        <nav class='studio-page-nav'>
           <li class='page-nav-item'>
             <a href='lenard.html'>
             <label>LENARD PETIT</label>
@@ -68,7 +68,7 @@
           </li>
           <li class='page-nav-item'>
             <a href='friends.html'>
-            <label>FRIENDS OF THE STUDIO</label>
+            <label>FRIENDS</label>
             <img src='assets/images/friends.jpeg' />
             </a>
           </li>
